Fri May  8 15:43:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_ext_mpart): should work even if body-fld-dsp
	  is omitted.  [ruby-core:69093] [Bug #11128]

Fri May  8 15:05:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/syntax/control_expressions.rdoc: fix a missing "a"
	  [fix GH-888][ci skip] Patch by @riffraff

Fri May  8 12:11:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): resolve refined method entry
	  to check if undefined.  [ruby-core:69064] [Bug #11117]

Thu May  7 22:22:59 2015  Sho Hashimoto  <sho-h@ruby-lang.org>

	* proc.c: [DOC] fix Binding#local_variable_set example. [ci skip]

Thu May  7 11:32:57 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (rbconfig.rb): add rule to make.

Thu May  7 05:14:39 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (connect_nonblock): use IO#wait_writable
	* lib/drb/drb.rb (DRB::DRbTCPSocket#alive?): use IO#wait_readable
	* lib/webrick/httpserver.rb (run): ditto
	* lib/resolv.rb (request): ditto for single socket case
	  [ruby-core:68943] [Feature #11081]

Wed May  6 22:49:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): undefined refined method is
	  not callable unless using.  [ruby-core:69064] [Bug #11117]

Sun May  3 22:40:06 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* ext/-test-/file/fs.c: need to include sys/statvfs.h
	  to use statvfs().

	* ext/-test-/file/extconf.rb: check the existence of
	  sys/statvfs.h

Sun May  3 21:59:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/yaml.rb: fix typo. [ci skip][fix GH-890]
	  Patch by @miketheman

Sun May  3 10:02:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (linear_object_p, range_include): test if covered for
	  linear objects.  [ruby-core:69052] [Bug #11113]

Fri May  1 13:30:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_load): check if a different libruby is loaded by the